<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtViewPaiementAddTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paiement_add_titre"
        android:textSize="20sp"
        android:layout_marginBottom="3dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtViewPaiementAddTiers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operation_add_moyen_paiement"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_below="@+id/txtViewPaiementAddTitre"/>

    <EditText
        android:id="@+id/editTextPaiementAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewPaiementAddTitre"
        android:layout_toEndOf="@+id/txtViewPaiementAddTiers"/>

    <Button
        android:id="@+id/btnPaiementAddValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_valider"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/editTextPaiementAdd"
        android:layout_toStartOf="@+id/btnPaiementAddAnnuler"/>

    <Button
        android:id="@+id/btnPaiementAddAnnuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_annuler"
        android:layout_below="@+id/editTextPaiementAdd"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>