<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AccueilActivity"
    tools:showIn="@layout/activity_accueil"
    android:stretchColumns="1">

    <TableRow
        android:id="@+id/rowMenuCompte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMenuAccesCompte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:cardElevation="5dp"
            android:layout_span="3"
            app:cardBackgroundColor="@color/colorCardMenu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtViewMenuMonCompte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compte_libelle"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/txtViewMenuDebitTitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compte_debit_titre"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtViewMenuMonCompte"
                android:layout_margin="5dp"
                />

            <TextView
                android:id="@+id/txtViewMenuDebitModif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compte_debit_modif"
                android:layout_below="@+id/txtViewMenuDebitTitre"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                />

            <TextView
                android:id="@+id/txtViewMenuCreditTitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compte_credit_titre"
                android:layout_below="@+id/txtViewMenuMonCompte"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/txtViewMenuCreditModif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compte_credit_modif"
                android:layout_below="@+id/txtViewMenuCreditTitre"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/txtViewMenuSoldeTitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compte_solde_titre"
                android:layout_below="@+id/txtViewMenuMonCompte"
                android:layout_margin="5dp"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/txtViewMenuSoldeModif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compte_solde_modif"
                android:layout_below="@+id/txtViewMenuSoldeTitre"
                android:layout_margin="5dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMenuAjoutCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/colorCardMenu">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtViewMenuAjoutOpTitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajout_operation"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/txtViewMenuAjoutOpImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@+id/txtViewMenuAjoutOpTitre"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/add_btn"/>

        </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </TableRow>


    <TableRow>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMenuAccesRapprochement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:cardElevation="5dp"
            android:layout_span="4"
            app:cardBackgroundColor="@color/colorCardMenu">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rapprochement"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:paddingBottom="50dp"/>

        </androidx.cardview.widget.CardView>


    </TableRow>

</TableLayout>